yoshimi 2.3.2 M

2024-3-7 Will
bn 2319
Merged in new GUI/core interface from Hermann
Cleaned up some doccumentation
Set CMakeLists for (usually) faster GUI compilation

2024-2-19 Will
bn 2318
Final cleanups
Set release version 2.3.2

2024-2-18 Will
bn 2317
Some small CLI text corrections
Updated HTML guide
Cleaned up some coding style inconsistencies
No code changes

Set minimum C++ standard as 17
Updated copyright notices

2024-2-17 Will
bn 2316
BugFix: From Kristian: Missing file in LV2 code
BugFix: From Kristian: Incorrect Kitmode GUI setting
Set version 2.3.2 rc2

2024-2-14 Will
bn 2315
BugFix: Wrong default for insert type chorus volume.
BugFix: New echo separate button text not scaled.
BugFix: Effects text not rescaled if opened at large size.
BugFix: Sys/Ins not rescaled if window resized when hidden.
Updated Yoshimi Control data.
Finalised integration of separate L/R Echo repeat rates.
Revised some of the User Guide.
Added some instrument patches.

2024-2-11 Will
bn 2314
Merged in Kristian's improvements
Updated Yoshimi Control Data

2024-2-9 Will
bn 2313
Build option ReportNoteTimes now working properly.
Various small GUI refinements and cleanups.

2024-2-8 Will
bn 2312
CLI can now handle master volume and master detune as floats.
Completed conversion of normal SubSynth controls.
Paste function correctly positions all controls.

2024-2-6 Will
bn 2311
Working through conversion of normal SubSynth controls.

2024-2-4 Will
Added "Major control updates on window refresh" to dev_notes

2024-1-29 Will
bn 2310
Trial of SubSynth slider bank update.

Forgot a bit!

2024-1-21 Will
bn 2309
Completed conversion of LFO inserts.

2024-1-17 Will
bn 2308
Some small cleanups in EnvelopeUI.
Removed unused duplicate freemode button.

2024-1-17 Will
bn 2307
BugFix: Filter UI not displaying Q real value.
DynFilter no longer needs 'spare1'.
Updated Control Data.

2024-1-14 Will
bn 2306
Completed AddSynth conversions that don't redraw waveforms.

2024-1-13 Will
bn 2305