@@ -52,6 +52,7 @@ file (GLOB yoshimi_interface_files
     ../Interface/GuiDataExchange.cpp ../Interface/GuiDataExchange.h
     ../Interface/InterfaceAnchor.h
     ../Interface/MidiDecode.cpp ../Interface/MidiDecode.h
+    ../Interface/Vectors.cpp ../Interface/Vectors.h
     ../Interface/InterChange.cpp ../Interface/InterChange.h
     ../Interface/Data2Text.cpp ../Interface/Data2text.h
     ../Interface/Text2Data.cpp ../Interface/Text2Data.h
